--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,6 +5,8 @@
             "label": "C/C++: g++ build active file",
             "command": "/usr/bin/g++",
             "args": [
+                "--std",
+                "c++20",
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
